update meter owner
