# src/models/meter.ts
@@ -1,3 +1,5 @@
+import { ICustomerInfo } from "../Dtos/customerBill";
+
 export interface MeterDto {
   id: string;
   name: string;
@@ -5,6 +7,7 @@ export interface MeterDto {
   accountType?: string | 'Prepaid' | 'Postpaid' | null;
   provider?: string | 'NESCO' | 'DESCO';
   userId?: string;
+  owner?: ICustomerInfo | any;
   createdAt: Date;
   updatedAt?: Date;
 }
